fixed path issues/add wiki urls to df

--- a/data_cleaner.ipynb
+++ b/data_cleaner.ipynb
@@ -14,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7feb7a0e",
    "metadata": {},
    "source": [
     "<h2>Load Data</h2>"
@@ -45,6 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 352,
+   "id": "fae46f1d",
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +80,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6bdec62d",
    "metadata": {},
    "source": [
     "<h2>Fix Type Issues</h2>"
@@ -97,6 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
+   "id": "2f52e40c",
    "metadata": {},
    "outputs": [
     {
@@ -110,12 +114,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "movies_df.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "dc79e243",
    "metadata": {},
    "source": [
     "<h2>Add Wikipedia Links to links.csv</h2>"
@@ -124,6 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
+   "id": "c6ee2854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 356,
+   "id": "4ec825e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 357,
+   "id": "a267e70f",
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 358,
+   "id": "9686e9aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,6 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
+   "id": "3e950d26",
    "metadata": {},
    "outputs": [
     {
@@ -280,6 +288,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7097624",
    "metadata": {},
    "source": [
     "<h2>Merge Datasets to form a Master Dataset</h2>"
@@ -316,6 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 362,
+   "id": "1c458b9b",
    "metadata": {},
    "outputs": [
     {
@@ -434,6 +444,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d57f08fc",
    "metadata": {},
    "source": [
     "<h2>Expands cells of master dataframe into smaller dataframes</h2>"
@@ -458,6 +469,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e74fc4c",
    "metadata": {},
    "source": [
     "<h2>Simplifies complicated cells into an array of IDs</h2>"
@@ -512,6 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 367,
+   "id": "a340bd84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,6 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 368,
+   "id": "47e9e737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,6 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 369,
+   "id": "83efdf60",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +577,222 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 372,
+   "id": "2c33d45b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "adult                                                                False\n",
+       "belongs_to_collection                                                  NaN\n",
+       "budget                                                                   0\n",
+       "genres                                                     [18, 10749, 37]\n",
+       "homepage                                                               NaN\n",
+       "id                                                                   75315\n",
+       "imdb_id                                                          tt0034269\n",
+       "original_language                                                       en\n",
+       "original_title                                                       Texas\n",
+       "overview                 Two Virginians are heading for a new life in T...\n",
+       "popularity                                                        0.775765\n",
+       "poster_path                               /53dMETJhFBnjw5Uf9ufzFsiouaX.jpg\n",
+       "production_companies                                                   [5]\n",
+       "production_countries     [{'iso_3166_1': 'US', 'name': 'United States o...\n",
+       "release_date                                                    1941-10-09\n",
+       "revenue                                                                0.0\n",
+       "runtime                                                               93.0\n",
+       "spoken_languages                  [{'iso_639_1': 'en', 'name': 'English'}]\n",
+       "status                                                            Released\n",
+       "tagline                               All the thrills of the roaring West!\n",
+       "title                                                                Texas\n",
+       "video                                                                False\n",
+       "vote_average                                                           5.3\n",
+       "vote_count                                                             6.0\n",
+       "keywords                           [1556, 1621, 2820, 10685, 15225, 33600]\n",
+       "cast                     [8252, 3381, 14965, 13555, 30512, 30539, 34317...\n",
+       "crew                                           [7336, 19093, 64117, 82838]\n",
+       "rating                                                                 NaN\n",
+       "wikipediaId                https://en.wikipedia.org/wiki/Texas_(1941_film)\n",
+       "Name: 18432, dtype: object"
+      ]
+     },
+     "execution_count": 372,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[17600]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "id": "9903efc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 29)"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df.wikipediaId == \"https://en.wikipedia.org/wiki/Texas_(1941_film)\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "id": "2d47121d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>wikipediaId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>862</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Toy_Story</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>807</td>\n",
+       "      <td>Se7en</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Seven_(1995_film)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Star_Wars_(film)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>101</td>\n",
+       "      <td>Léon</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/L%C3%A9on:_The_P...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>680</td>\n",
+       "      <td>Pulp Fiction</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Pulp_Fiction</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42648</th>\n",
+       "      <td>330459</td>\n",
+       "      <td>Rogue One: A Star Wars Story</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Rogue_One</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42651</th>\n",
+       "      <td>381288</td>\n",
+       "      <td>Split</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Split_(2016_Amer...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42695</th>\n",
+       "      <td>274870</td>\n",
+       "      <td>Passengers</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Passengers_(2016...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43329</th>\n",
+       "      <td>263115</td>\n",
+       "      <td>Logan</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Logan_(film)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43381</th>\n",
+       "      <td>321612</td>\n",
+       "      <td>Beauty and the Beast</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Beauty_and_the_B...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>179 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id                original_title  \\\n",
+       "0         862                     Toy Story   \n",
+       "46        807                         Se7en   \n",
+       "256        11                     Star Wars   \n",
+       "289       101                          Léon   \n",
+       "292       680                  Pulp Fiction   \n",
+       "...       ...                           ...   \n",
+       "42648  330459  Rogue One: A Star Wars Story   \n",
+       "42651  381288                         Split   \n",
+       "42695  274870                    Passengers   \n",
+       "43329  263115                         Logan   \n",
+       "43381  321612          Beauty and the Beast   \n",
+       "\n",
+       "                                             wikipediaId  \n",
+       "0                https://en.wikipedia.org/wiki/Toy_Story  \n",
+       "46       https://en.wikipedia.org/wiki/Seven_(1995_film)  \n",
+       "256       https://en.wikipedia.org/wiki/Star_Wars_(film)  \n",
+       "289    https://en.wikipedia.org/wiki/L%C3%A9on:_The_P...  \n",
+       "292           https://en.wikipedia.org/wiki/Pulp_Fiction  \n",
+       "...                                                  ...  \n",
+       "42648            https://en.wikipedia.org/wiki/Rogue_One  \n",
+       "42651  https://en.wikipedia.org/wiki/Split_(2016_Amer...  \n",
+       "42695  https://en.wikipedia.org/wiki/Passengers_(2016...  \n",
+       "43329         https://en.wikipedia.org/wiki/Logan_(film)  \n",
+       "43381  https://en.wikipedia.org/wiki/Beauty_and_the_B...  \n",
+       "\n",
+       "[179 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 382,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['id','original_title','wikipediaId']].loc[df.vote_count > 4000]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "56b6b636",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -573,7 +803,8 @@
    "hash": "47ae4a08faa879d2cd72b44ae9e79460bb1caead6fa5206821005b13a1bbf4d2"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit ('tf3': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -586,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
