--- a/recommender_framework.ipynb
+++ b/recommender_framework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "151"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,25 +88,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Dragonslayer',\n",
-       " \"Alice's Wonderland\",\n",
-       " 'Princess and the Pony',\n",
-       " 'How to Hook Up Your Home Theater',\n",
-       " 'Who Killed Cock Robin?',\n",
-       " 'Fantasia',\n",
-       " 'Fun & Fancy Free',\n",
-       " 'Babes in the Woods',\n",
-       " \"Mickey's Orphans\",\n",
-       " 'Enchanted']"
+       "Unnamed: 0                                                   1206\n",
+       "title                                                Dragonslayer\n",
+       "vote_average                                                  6.5\n",
+       "release_date                                           1981-06-26\n",
+       "popularity                                               3.383201\n",
+       "bag_of_words    magic sorcerer egg possible film order sorcere...\n",
+       "imdb_id                                                 tt0082288\n",
+       "tmdbId                                                    47907.0\n",
+       "wikipediaUrl    https://en.wikipedia.org/wiki/Dragonslayer_(19...\n",
+       "Name: 1206, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,77 +124,45 @@
     "\n",
     "for result in bm25_top_result:\n",
     "    index_of_show = movie_metadata.index[movie_metadata['bag_of_words'] == result].to_list()[0]\n",
-    "    result_of_show.append(movie_metadata.iloc[index_of_show]['title'])\n",
-    "result_of_show"
+    "    result_of_show.append(movie_metadata.iloc[index_of_show])\n",
+    "result_of_show[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://en.wikipedia.org/wiki/Alice%27s_Wonderland']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(movie_metadata[movie_metadata['title'] == \"Alice's Wonderland\"]['wikipediaUrl'].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>title</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>popularity</th>\n",
-       "      <th>bag_of_words</th>\n",
-       "      <th>imdbId</th>\n",
-       "      <th>tmdbId</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4404</th>\n",
-       "      <td>6018</td>\n",
-       "      <td>Alice's Wonderland</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>1923-01-01</td>\n",
-       "      <td>1.138122</td>\n",
-       "      <td>disney animation silent film room wonderland i...</td>\n",
-       "      <td>3593046</td>\n",
-       "      <td>360203.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      Unnamed: 0               title  vote_average release_date  popularity  \\\n",
-       "4404        6018  Alice's Wonderland           6.5   1923-01-01    1.138122   \n",
-       "\n",
-       "                                           bag_of_words   imdbId    tmdbId  \n",
-       "4404  disney animation silent film room wonderland i...  3593046  360203.0  "
+       "'https://en.wikipedia.org/wiki/Dragonslayer_(1981_film)'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movie_metadata[movie_metadata['title'] == \"Alice's Wonderland\"]"
+    "result_of_show[0].wikipediaUrl"
    ]
   },
   {
@@ -207,9 +175,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('venv': venv)",
+   "display_name": "Python [conda env:tf3]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tf3-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,9 +189,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "fa9896ad6eaf445dd34d5fa597a2ec5cccaab461ff10198e424fccf58dde1002"
