chatbot framework update

--- a/data_cleaning/recommender_framework.ipynb
+++ b/data_cleaning/recommender_framework.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "##Query Test:\n",
     "\n",
-    "query = \"disney princess.\"\n",
+    "query = \"princess disney.\"\n",
     "cleaned_query = clean_words(query)\n",
     "tokenized_query = cleaned_query.split(\" \")\n",
     "bm25_top_result = bm25.get_top_n(tokenized_query, corpus, n=10)\n",
